# metalbench

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: plan.md
src/metalbench/: __main__.py  analysis.py  cli.py  correctness.py  env.py  eval_batch.py  eval_one.py  generation_contract.py  import_utils.py  kernelbench_adapter.py  static_check.py  timing.py  types.py
tests/: test_analysis.py  test_cli_smoke.py  test_correctness.py  test_env.py  test_eval_batch.py  test_eval_one.py  test_generation_contract.py  test_import_utils.py  test_kernelbench_adapter.py  test_static_check.py  test_timing.py
